gobmkida/c3/attack4
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/attack4/src/engine/reading.c:3658:29: error: use of undeclared identifier 'byte_9C689F'
|| v21 == ( unsigned __int8)byte_9C689F[v23] 
                            ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/attack4/src/engine/reading.c:3659:29: error: use of undeclared identifier 'byte_9C688C'
|| v21 == ( unsigned __int8)byte_9C688C[v23] 
                            ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/attack4/src/obj/1/reading.o] Error 1
